maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:31: error: illegal start of simple expression
  while (!murAGauche()):Boolean =
                       ^